# milpo

./: .gitignore  CLAUDE.md  README.md  REPRODUCE.md  docker-compose.yml  package.json  pyproject.toml
.claude/hooks/: check-claude-md.py
agents/: cli.py  config.py  pipeline.py  run_agent_baseline.py  tools.py
apps/backend/: main.py  pyproject.toml
apps/backend/app/: config.py  db.py  main.py
apps/backend/app/repositories/: posts.py  taxonomy.py
apps/backend/app/routers/: annotations.py  posts.py  taxonomy.py
apps/backend/app/schemas/: taxonomy.py
apps/backend/app/services/: posts.py  taxonomy.py
apps/backend/migrations/: 001_initial_schema.sql  003_descriptor_agent.sql  003_taxonomy_descriptions.sql  004_rewrite_log_extensions.sql  006_seed_prompts_v0.sql  007_prompt_source.sql  011_agent_traces.sql  012_agent_executor_prompt.sql  013_agent_tool_prompts.sql
apps/frontend/: package-lock.json  package.json
docs/: agent_perspective.md  analyse_economique.tex  analyse_economique_standalone.tex  analyse_economique_v2_pairs.tsv  analyse_economique_v2_summary.tsv  architecture.md  assist_vs_alma.md  claude_psychosis.md  conventions.md  data.md  evaluation.md  human_perspective.md  phases.md  planning.md  project.md  prompts_v0.md  related_work.md  schema.md  stack.md
docs/codex_writes/: build_memoire_assets.py
hilpo/: agent.py  async_inference.py  client.py  config.py  db.py  eval.py  gcs.py  inference.py  prompts_v0.py  rewriter.py  router.py  schemas.py
milpo/: agent.py  agent_common.py  async_inference.py  cli.py  client.py  config.py  db.py  e2e_inference.py  eval.py  gcs.py  inference.py  inference_core.py  oracle.py  rewriter.py  schemas.py  taxonomy_renderer.py  tui.py
milpo/db/: __init__.py  posts.py
milpo/importing/: csv_import.py
milpo/persistence/: __init__.py  classification.py
milpo/prompting/: __init__.py  catalog.py
milpo/prompts/: __init__.py  alma.py  classifier.py  simple.py
related_work/: README.md  __init__.py
scripts/: ablation_2x2.sh  ablation_alpha.sh  ablation_test.sh  analyze_run.sql  electre_iii.py  extract_features_dev.py  generate_analyse_economique_v2_figures.py  import_csv.py  plot_ablation_alpha.py  plot_alpha_factorial_returns.py  plot_alpha_token_diagnostics.py  plot_best.py  run_baseline.py  run_simulation.py  simulate_cascade.py  test_assist_architecture.py  test_pipeline.py  validate_oracle.py
tests/: test_milpo_async_inference.py  test_milpo_cli.py  test_milpo_persistence.py  test_milpo_prompting.py  test_milpo_rewrite.py  test_milpo_workflows.py  test_post_timeout.py
tui/: index.tsx  types.ts
(+32 files in other folders)
