[project]
name = "milpo"
version = "0.1.0"
description = "MILPO — Multimodal Iterative Loop Prompt Optimization engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.82.0",
    "pydantic>=2.11.0",
    "psycopg[binary]>=3.3.3",
    "google-cloud-storage>=3.10.0",
    "google-auth>=2.49.0",
    "python-dotenv>=1.2.0",
    "rich>=14.0.0",
    "websockets>=15.0",
    "google-genai>=1.72.0",
]

[tool.setuptools.packages.find]
include = ["milpo*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
eval = [
    "scikit-learn>=1.6.0",
    "numpy>=2.0.0",
]
dspy = [
    "dspy-ai>=2.6.0",
]
agent = [
    "anthropic>=0.52.0",
]
